--- a/src/index.css
+++ b/src/index.css
@@ -86,6 +86,12 @@
            focus:outline-none focus:ring-2 focus:ring-black focus:ring-offset-2;
   }
 
+  .btn-danger {
+    @apply px-6 py-3 bg-red-600 text-white rounded-xl font-medium
+           hover:bg-red-700 active:scale-95 transition-all duration-200
+           focus:outline-none focus:ring-2 focus:ring-red-600 focus:ring-offset-2;
+  }
+
   /* Input styles */
   .input {
     @apply w-full px-4 py-3 bg-white border-2 border-gray-200 rounded-xl
